# wildtrain

./: .gitignore  README.md  example.env  launch_ui.bat  main.py  pyproject.toml  run_api.py
configs/: curriculum.yaml  inference.yaml  label_studio_config.xml  main.yaml
configs/classification/: classification.yaml  classification_eval.yaml  classification_pipeline_config.yaml  classification_sweep.yaml  classification_train.yaml  classification_train_no_curriculum.yaml  classification_visualization.yaml  example_config.yaml
configs/datapreparation/: import-config-example.yaml  savmap.yaml
configs/detection/: mmdet.yaml  mmdet_train_cfg.py  visualization.yaml  yolo.yaml  yolo_eval.yaml
configs/detection/mmdet_configs/: dataset.py  faster-rcnn_r50_fpn.py  mmdet.yaml  mmdet_train_cfg.py  scheduler-runtime.py
configs/detection/yolo_configs/: yolo.yaml  yolo_eval.yaml  yolo_pipeline_config.yaml
configs/registration/: classifier_registration_example.yaml  detector_registration_example.yaml  localizer_registration_example.yaml
examples/: classification_data_filtering.py  compute_dataset_stats.py  create_dataset.py  crop_dataset_clustering_example.py  crop_dataset_rebalancing_example.py  curriculum_classification_example.py  curriculum_detection_example.py  detectors.py  eval_classifier.py  eval_yolo.py  explain_classifier_with_shap.py  hpo_classifier.py  loading_registered_model.py  roi_dataset_clustering.example.py  run_inference.py  scripting_model.py  train_classifier.py  train_classifier_from_yaml.py  train_mmdet.py  train_yolo.py  visualize_classifier_predictions.py  visualize_detection_predictions.py
microservices/: docker-compose.yml
pipelines/: classification_pipeline_config.yaml  yolo_pipeline_config.yaml
scripts/: create_dataset.bat  eval_classifier.bat  eval_detector.bat  eval_yolo.bat  launch_minio.bat  launch_mlflow.bat  launch_ui.bat  register_model.bat  run_classification_pipeline.bat  run_detection_pipeline.bat  run_server.bat  train_classifier.bat  visualize_predictions.bat
src/: ui.py
src/wildtrain/: __main__.py  cli.py  server.py  visualization.py
src/wildtrain/api/: __init__.py  dependencies.py  main.py
src/wildtrain/cli/: __init__.py  cli.py  config_loader.py  models.py
src/wildtrain/data/: __init__.py  classification_datamodule.py  utils.py  visualization.py
src/wildtrain/evaluators/: base.py  classification.py  metrics.py  ultralytics.py
src/wildtrain/explainers/: shap.py
src/wildtrain/models/: __init__.py  classifier.py  detector.py  feature_extractor.py  localizer.py  register.py  utils.py
src/wildtrain/pipeline/: classification_pipeline.py  detection_pipeline.py
src/wildtrain/shared/: __init__.py  config_types.py  models.py  validation.py
src/wildtrain/trainers/: __init__.py  base.py  classification_trainer.py  detection_trainer.py  mmdetection_trainer.py  sweeps.py  yolo_utils.py
src/wildtrain/utils/: dvc_tracker.py  (+6 more)
tests/: README.md  conftest.py
tests/utils/: test_helpers.py
work_dirs/mmdet/: mmdet_train_cfg.py
(+66 files in other folders)
