[project]
name = "wildtrain"
version = "0.1.0"
description = "Modular Computer Vision Framework for Detection and Classification"
authors = [
    { name = "Fadel Seydou", email = "fadel.seydou@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "dvc[s3]>=3.61.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "mlflow>=3.1.1",
    "openmim>=0.3.9",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "timm>=1.0.17",
    "torch==2.7.1",
    "torchmetrics>=1.7.4",
    "typer>=0.16.0",
]

[project.scripts]
wildtrain = "wildtrain.cli:app"


[tool.ruff]
target-version = "py311"
line-length = 88
select = ["I", "E", "F", "W", "C90"]
ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
