[project]
name = "wildtrain"
version = "0.1.0"
description = "Modular Computer Vision Framework for Detection and Classification"
authors = [
    { name = "Fadel Seydou", email = "fadel.seydou@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "dvc[s3]",
    "hydra-core",
    "lightning==2.3.3",
    "mlflow",
    "openmim>=0.3.9",
    "python-dotenv",
    "rich>=14.0.0",
    "timm",
    "numpy<2.0.0",
    "supervision",
    "torch==2.1.0",
    "torchmetrics",
    "typer>=0.16.0",
    "ultralytics>=8.3.168",
]

[project.scripts]
wildtrain = "wildtrain.cli:app"


[tool.ruff]
line-length = 88
select = ["I", "E", "F", "W", "C90"]
ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
