[project]
name = "wildtrain"
version = "0.1.0"
description = "Modular Computer Vision Framework for Detection and Classification"
authors = [
    { name = "Fadel Seydou", email = "fadel.seydou@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "dvc[s3]",
    "hydra-core",
    "lightning==2.3.3",
    "mlflow",
    "openmim>=0.3.9",
    "python-dotenv",
    "rich>=14.0.0",
    "fiftyone==1.2.0",
    "timm",
    "supervision",
    "torch==2.6.0",
    "torchmetrics",
    "typer>=0.16.0",
    "ultralytics>=8.3.168",
    "omegaconf>=2.3.0",
    "shap>=0.48.0",
    "optuna>=4.4.0",
    "streamlit>=1.47.1",
]

[project.scripts]
wildtrain = "wildtrain.cli:app"


[tool.ruff]
line-length = 88
select = ["I", "E", "F", "W", "C90"]
ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
